[package]
name = "rumdb"
version = "0.1.0"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
tempdir = "0.3"
rand = "0.8.5"
