[package]
name = "rumdb"
license = "MIT"
version = "0.3.0"
edition = "2024"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
keywords = ["database", "persistence"]
categories = ["database-implementations"]
readme = "README.md"
exclude = ["examples"]
description = "Blazing fast key-value storage basec on Bitcask whitepaper"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "0.4"
log = "0.4"
thiserror = "2.0"

[dev-dependencies]
env_logger = "0.11"
tempdir = "0.3"
rand = "0.9"
